Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.21 (TBD)
------------

Changes:

- Upgrade attrs, cython, etc to open up Python 3.10 support (#1049).

Bug fixes:

- Clean up VSI files left by MemoryFileBase, resolving #1041.
- Hard-coded "utf-8" collection encoding added in #423 has been removed
  (#1057).

1.8.20 (2021-05-31)
-------------------

Packaging:

- Wheels include GDAL 3.3.0 and GEOS 3.9.1.

Bug fixes:

- Allow use with click 8 and higher (#1015).

1.8.19 (2021-04-07)
-------------------

Packaging:

- Wheels include GDAL 3.2.1 and PROJ 7.2.1.

Bug fixes:

- In fiona/env.py the GDAL data path is now configured using set_gdal_config
  instead by setting the GDAL_DATA environment variable (#1007).
- Spurious iterator reset warnings have been eliminatged (#987).

1.8.18 (2020-11-17)
-------------------

- The precision option of transform has been fixed for the case of
  GeometryCollections (#971, #972).
- Added missing --co (creation) option to fio-load (#390).
- If the certifi package can be imported, its certificate store location will
  be passed to GDAL during import of fiona._env unless CURL_CA_BUNDLE is
  already set.
- Warn when feature fields named "" are found (#955).

1.8.17 (2020-09-09)
-------------------

- To fix issue #952 the fio-cat command no longer cuts feature geometries at
  the anti-meridian by default. A --cut-at-antimeridian option has been added
  to allow cutting of geometries in a geographic destination coordinate
  reference system.

1.8.16 (2020-09-04)
-------------------

- More OGR errors and warnings arising in calls to GDAL C API functions are
  surfaced (#946).
- A circular import introduced in some cases in 1.8.15 has been fixed (#945).

1.8.15 (2020-09-03)
-------------------

- Change shim functions to not return tuples (#942) as a solution for the
  packaging problem reported in #941.
- Raise a Python exception when VSIFOpenL fails (#937).

1.8.14 (2020-08-31)